--- a/gym/src/main/resources/application.properties
+++ b/gym/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.application.name=gym
 server.port=9000
+
+spring.datasource.url=jdbc:mysql://localhost:3306/master?serverTimezone=Asia/Taipei&characterEncoding=utf-8
+spring.datasource.username=2400425
+spring.datasource.password=Aa123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
