--- a/gym/src/main/resources/application.properties
+++ b/gym/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.application.name=gym
 server.port=9000
 
-spring.datasource.url=jdbc:mysql://localhost:3306/master?serverTimezone=Asia/Taipei&characterEncoding=utf-8
-spring.datasource.username=2400425
-spring.datasource.password=Aa123456
+spring.datasource.url=jdbc:mysql://localhost:3306/amazon_clone?useSSL=false&serverTimezone=UTC
+spring.datasource.username=your_mysql_user
+spring.datasource.password=your_mysql_password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
